--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 </div><!-- final graficos dash -->
                 <div class="avisos-dash">
                             <h4 class="titulo-dash">Últimos avisos</h4>
+                            olá
                 </div>
                 </div><!-- final conteudo interno article -->
                 <footer id="rodape">
