--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
                 </div><!-- final conteudo interno article -->
                 <footer id="rodape">
-                        <div class="copyright">Copyright © 2018 <a href="#">Bootstrap Dash</a>. All rights reserved.</div>
+                        <div class="copyright">Copyright © 2018 <a href="#">Jonh Silva</a>. All rights reserved.</div>
                         <div class="created-by">Hand-crafted & made with <i class="icon-heath-by"></i></div>
                 </footer>
             </article>
