--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                 </div> <!-- final dados paginacao -->
                 <div class="resumo-dados">
                     <div class="resumo-vendas dash-resumo">
-                            Weekly Sales
+                            Vendas hoje
                     </div>
                     <div class="resumo-pedidos dash-resumo">
-                            Weekly Orders
+                            Pedidos hoje
                     </div>
                     <div class="resumo-visitantes dash-resumo">
-                            Visitors Online
+                            Visitas hoje
                     </div>
                 </div> <!-- final resumo dados -->
                 <div class="graficos-dash">
